# firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM32L051C6TX_FLASH.ld  build.sh  firmware_ops.ioc
Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  syscalls.c  system_stm32l0xx.c
Drivers/sl_i/Inc/: bsp.h  mq.h  sli.h
Drivers/sl_i/Src/: mq.c
Tests/: CMakeLists.txt  mq_test.cc  util_test.cc
